fix links when in nuxtcontent and on small screen sizes

--- a/assets/scss/_fonts.scss
+++ b/assets/scss/_fonts.scss
@@ -82,6 +82,7 @@ a {
   }
 
   .nuxt-content &[target="_blank"] {
+    display: inline-block;
     width: auto;
   }
 
